--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/md5": "^2.3.2",
     "@types/styled-components": "^5.1.25"
   }
 }
